TAG: mappingload-6-0-0-2
DATE: 09/22/2015
STAFF: sc
CHANGES: update delimiter add commit, etc etc

TAG: mappingload-6-0-0-1
DATE: 09/14/2015
STAFF: sc
CHANGES: While testing TR12109/TR12058 nomenload's discovered a conversion bug:
1) replaced: db.set_sqlLogFD(diagFile)
   with: db.set_commandLogFile(diagFileName)
   as db.set_sqlLogFD no longer exists

TAG: mappingload-3-5-4-2
DATE: 08/09/2006
STAFF: sc
CHANGES: 
1) added Configuration.default back - nomenload calls mappingload
   and expect to find Configuration
2) added comments to config.default

TAG: mappingload-3-5-4-1
DATE: 08/03/2006
STAFF: sc
CHANGES:
1) mappingload.py - updated outdated comments 
2) removed system_docs after creating wiki
3) remove Configuration.default - all this did was set and source mgiconfig
4) removed sourcing of Configuration (which didn't work anyway as it didn't
   (yet) know about MAPPINGLOAD variable. Added sourcing of mgiconfig
    
TAG: mappingload-3-5-1-4
TAG: mappingload-3-5-1-3
DATE: 09/28/2006
STAFF: lec
CHANGES: 
1) TR 7894; mgiconfig

TAG: mappingload-3-5-1-2
DATE: 09/21/2006
STAFF: lec
CHANGES: 
1) TR 7894; mgiconfig

TAG: mappingload-3-5-1-1
DATE: 09/06/2006
STAFF: lec
CHANGES: 
1) build 36; merge

TAG: mappingload-build36-2
DATE: 07/28/2006
STAFF: lec
CHANGES: 
1) build 36

TAG: mappingload-build36-1
DATE: 07/27/2006
STAFF: lec
CHANGES: 
1) build 36

TAG: mappingload-3-5-0-2
DATE: 05/02/2006
STAFF: lec
CHANGES: 
1) MGI 3.5; remove MLD_Marker

TAG: mappingload-3-5-0-1
DATE: 04/20/2006
STAFF: lec
CHANGES: 
1) MGI 3.5; remove MLD_Marker

TAG: mappingload-3-1-0-8
DATE: 04/14/2006
STAFF: lec
CHANGES: 
1) convert from regsub.sub() to re.sub()

TAG: mappingload-3-1-0-6
DATE: 09/27/2005
STAFF: lec
CHANGES: fix update MLD_Expts modification date

TAG: mappingload-3-1-0-6
DATE: 08/08/2005
STAFF: lec
CHANGES: update MLD_Expts modification date

TAG: mappingload-3-1-0-5
TAG: mappingload-3-1-0-4
TAG: mappingload-3-1-0-3
TAG: mappingload-3-1-0-2
DATE: 02/07/2005
STAFF: lec