@@ -16,7 +16,7 @@ touch ${MAPPINGLOG}
 
 date >> ${MAPPINGLOG}
 
-${MAPPINGLOAD}/mappingload.py -S${MGD_DBSERVER} -D${MGD_DBNAME} -U${MGD_DBUSER} -P${MGD_DBPASSWORDFILE} -M${MAPPINGMODE} -I${MAPPINGDATAFILE} -E"${EXPERIMENTTYPE}" >>& ${MAPPINGLOG}
+${MAPPINGLOAD}/mappingload.py -S${MGD_DBSERVER} -D${MGD_DBNAME} -U${MGD_DBUSER} -P${MGD_DBPASSWORDFILE} -M${MAPPINGMODE} -I${MAPPINGDATAFILE} -E"${EXPERIMENTTYPE}" >> ${MAPPINGLOG}
 
 date >> ${MAPPINGLOG}
 
