@@ -1,3 +1,9 @@
+TAG: mappingload-6-0-0-?
+DATE: 09/30/2015
+STAFF: lec
+CHANGES: 
+1) TR12070/12116 : changes to allow curator sanity checks
+
 TAG: mappingload-6-0-0-2
 DATE: 09/22/2015
 STAFF: sc
